fixed margin on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -114,6 +114,7 @@
     @media only screen and (max-width: $xs-max-width) {
       padding-top: 25px;
       padding-bottom: 100px;
+      margin-bottom: 0;
       position: relative;
       height: auto;
 
